# Visual-Odometry

./: .gitignore  CMakeLists.txt  README.md  evaluate_rpe.py  rpe.sh  run.sh
CPP_implementation/: CMakeLists.txt  README.md  pattern_gen.py
CPP_implementation/src/: Gaussian_pattern.cpp  MYORB.cpp  MYORB.h  main.cpp
CPP_implementation/src/src/: Gaussian_pattern.cpp  MYORB.cpp  MYORB.h  main.cpp
CPP_implementation/src/src/src_new/: MYORB.cpp  MYORB.h
Hardware_implementation/: Diagram.drawio  README.md  sram_usage.txt
Hardware_implementation/src/: BRIEF  BRIEF.sv  BRIEF.v  BRIEF_Top.sv  BRIEF_Top.v  CHIP.v  CHIP_all.sv  CHIP_all.v  CHIP_alltb.sv  CHIP_alltb.v  CHIP_tb.v  CHIP_tb_v2.sv  DW_div.v  DW_sqrt.v  FAST.sv  FAST.v  FAST_9.sv  FAST_9.v  FAST_tb.v  HAMMING.sv  HAMMING.v  Key_Buffer.v  Key_Buffer1.sv  Key_Buffer1.v  Key_Buffer2.sv  Key_Buffer2.v  LUT.sv  LUT.v  MATCH.sv  MATCH.v  MATCH_Top.sv  MATCH_Top.v  MATCH_mem.sv  NMS.sv  NMS.v  Orientation.sv  Orientation.v  Orientation_backup.v  SMOOTH.sv  SMOOTH.v  (+7 more)
Hardware_implementation/src/sram/: sram_FAST_lb.v  sram_dp_NMS.v  sram_keybuf1.v  sram_keybuf2.v
Hardware_implementation/src/sram_v2/: sram_BRIEF_lb.v  sram_FAST_lb.v  sram_dp_NMS.v  sram_dp_sincos.v
Hardware_implementation/testfile/: depth_in1.txt  depth_in2.txt  depth_in3.txt  golden.txt
RgbdVoAsic/: CMakeLists.txt  draw_gt.py  evaluate_rpe.py  pose_fr1_360.txt  rpe.sh  run.sh
RgbdVoAsic/include/: MYORB.h  vo.hpp
RgbdVoAsic/src/: Gaussian_pattern.cpp  MYORB.cpp  main.cpp  vo.cpp
include/: rgbd.hpp
src/: MYORB.cpp  depth_to_3d.cpp  main.cpp  normal.cpp  odometry.cpp
